--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;">
       <a-assets>
         <a-asset-item id="model-fbx" src="content/salat.fbx"></a-asset-item>
         <img id="image-target" src="markers/medved.jpeg" crossorigin="anonymous">
@@ -16,7 +16,7 @@
       <a-marker type="image" preset="custom" url="markers/medved.jpeg">
         <a-entity
           position="0 0 0"
-          scale="0.1 0.1 0.1"
+          scale="0.5 0.5 0.5"
           rotation="0 180 0"
           gltf-model="#model-fbx"
           material="src: #model-texture"
