--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <a-marker type="image" preset="custom" url="markers/medved.jpeg">
         <a-entity
           position="0 0 0"
-          scale="0.5 0.5 0.5"
+          scale="0.1 0.1 0.1"
           rotation="0 180 0"
-          gltf-model="#model-fbx"
+          fbx-model="#model-fbx"
           material="src: #model-texture"
         ></a-entity>
       </a-marker>
