--- a/index.html
+++ b/index.html
@@ -1,29 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Web AR with FBX Model and Image Tracking</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  </head>
-  <body>
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;">
-      <a-assets>
-        <a-asset-item id="model-fbx" src="content/salat.fbx"></a-asset-item>
-        <img id="image-target" src="markers/medved.jpeg" crossorigin="anonymous">
-        <img id="model-texture" src="content/salatMap.png" crossorigin="anonymous">
-      </a-assets>
-
-      <a-marker type="image" preset="custom" url="markers/medved.jpeg">
-        <a-entity
-          position="0 0 0"
-          scale="0.1 0.1 0.1"
-          rotation="0 180 0"
-          fbx-model="#model-fbx"
-          material="src: #model-texture"
-        ></a-entity>
-      </a-marker>
-
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/dist/mindar-image.prod.js"></script>
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+</head>
+<body>
+  <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-entity mindar-image-target="targetIndex: 0">
+      <a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+    </a-entity>
+  </a-scene>
+</body>
 </html>
