--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
-      <a-asset-item id="model" src="./content/salat.fbx"></a-asset-item>
+      <a-asset-item id="model" src="./content/salat.gltf"></a-asset-item>
     </a-assets>
     
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
