--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-assets>
       <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.png" />
       <a-asset-item id="model" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
-      <a-asset-item id="our_model" src="./content/Salad.gltf"></a-asset-item>
+      <!--<a-asset-item id="our_model" src="./content/Salad.gltf"></a-asset-item>-->
     </a-assets>
     
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -17,7 +17,7 @@
         <!--<a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>-->
         <!--<a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>-->
         <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#model">
-        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="1 1 1" src="#our_model">
+        <!--<a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="1 1 1" src="#our_model">-->
     </a-entity>
   </a-scene>
 </body>
