--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
-      <a-asset-item id="model" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
+      <!--<a-asset-item id="model" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>-->
       <a-asset-item id="our_model" src="./content/Salad.gltf"></a-asset-item>
     </a-assets>
     
@@ -15,7 +15,7 @@
     <a-entity mindar-image-target="targetIndex: 0">
         <!--<a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>-->
         <!--<a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>-->
-        <a-gltf-model rotation="0 0 0 " position="0 0 0" scale="0.005 0.005 0.005" src="#model">
+        <!--<a-gltf-model rotation="0 0 0 " position="0 0 0" scale="0.005 0.005 0.005" src="#model">-->
         <a-gltf-model rotation="0 0 0 " position="0 0 0" scale="0.005 0.005 0.005" src="#our_model">
     </a-entity>
   </a-scene>
